progress on rotary tools and service kits

--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -27,9 +27,17 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/barracuda-01.jpg" alt="lorem ipsum dolor sit">
-            <img class="ms-thumb" src="/assets/img/product/thumb-barracuda-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/barracuda-02.jpg" alt="Barracuda rotary shotgun tools for hydroblasting">
+            <img class="ms-thumb" src="/assets/img/product/thumb-barracuda-02.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/AqTlBprieP0"> </a>
+          </div>
+          <div class="ms-slide">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/barracuda-01.jpg" alt="Barracuda rotary shotgun tools for hydroblasting">
+            <img class="ms-thumb" src="/assets/img/product/thumb-barracuda-01.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/barracuda-03.jpg" alt="Barracuda rotary shotgun tools for hydroblasting">
+            <img class="ms-thumb" src="/assets/img/product/thumb-barracuda-03.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -76,6 +84,7 @@ master-slider: yes
               <li><a href="#section-bar-2"><span>44k Specifications</span></a></li>
               <li><a href="#section-bar-3"><span>Manuals/Docs</span></a></li>
               <li><a href="#section-bar-4"><span>Videos</span></a></li>
+              <li><a href="#section-bar-5"><span>Service Kits</span></a></li>
             </ul>
         </nav>
         <div class="content-wrap">
@@ -487,6 +496,279 @@ master-slider: yes
                 <p class="caption">22k Maintenance Video</p>
               </div>
             </div>
+          </section>
+          
+          <!-- Kits -->
+          <section id="section-bar-5">
+            <div class="col-sm-8">
+              <h3>The following kits are available:</h3>
+              <p><em class="grey">Click to view kit contents</em></p>
+              <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="heading1">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                        <strong>BC 600</strong> Service Kit for BC-K/BC-K-P2<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BC 123</strong> O-Ring</li>
+                            <li>1 x <strong>BC 410.15</strong> Syringe, 20CC</li>
+                            <li>1 x <strong>BC 415</strong> Syringe Tube Assembly</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
+                            <li>1 x <strong>BJ 072</strong> O-Ring</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>FT 011-UH</strong> Carbide Seat</li>
+                            <li>1 x <strong>FT 012</strong> H.P. Seal Assembly</li>
+                            <li>1 x <strong>GP 042</strong> ATF Lubricant, 32 oz.</li>
+                            <li>1 x <strong>PL 514</strong> Tool manual</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="heading2">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                        <strong>BC 600-H9-C</strong> Service Kit for BC-H9-C<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BC 410.15</strong> Syringe, 20CC</li>
+                            <li>1 x <strong>BC 415</strong> Syringe Tube Assembly</li>
+                            <li>1 x <strong>BC 705-K</strong> Cartridge Assembly</li></ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>GP 042</strong> ATF Lubricant, 32 oz.</li>
+                            <li>1 x <strong>PL 515</strong> Tool manual</li>
+                            <li>1 x <strong>PL 607</strong> Cartridge manual</li>
+                          </ul>
+                        </div>
+                      </div>   
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="heading3">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                        <strong>BC 602</strong> Seal Kit for BC-K/BC-K-P2<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading3">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BC 123</strong> O-Ring</li>
+                            <li>1 x <strong>BJ 072</strong> O-Ring</li>
+                            <li>1 x <strong>FT 011-UH</strong> Carbide Seat</li>
+                            <li>1 x <strong>FT 012</strong> H.P. Seal Assembly</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="heading4">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
+                        <strong>BC 602-H9-C</strong> Seal Kit for BC-H9-C<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BC 414</strong> Mandrel - Cartridge Assembly</li>
+                            <li>1 x <strong>BC 506</strong> Seat Face</li>
+                            <li>1 x <strong>BC 511</strong> Carbide Seat</li>
+                            <li>1 x <strong>BC 512-O</strong> HP Seal Assembly</li>
+                            <li>1 x <strong>BC 520</strong> Seal Retainer</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BC 522-001</strong> Inlet Seat, Grooved</li>
+                            <li>1 x <strong>BC 524</strong> Spring, Compression</li>
+                            <li>1 x <strong>BJ 072</strong> O-Ring</li>
+                            <li>1 x <strong>BJ 417</strong> O-Ring</li>
+                            <li>1 x <strong>PL 512</strong> Tool manual</li>
+                          </ul>
+                        </div>
+                      </div>   
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="heading5">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse5" aria-expanded="false" aria-controls="collapse5">
+                        <strong>BC 610</strong> Overhaul Kit for BC-K<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading5">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BC 008</strong> O-Ring</li>
+                            <li>1 x <strong>BC 009</strong> Bearing, Ball</li>
+                            <li>1 x <strong>BC 031</strong> Back-up Ring</li>
+                            <li>1 x <strong>BC 040</strong> O-Ring</li>
+                            <li>1 x <strong>BC 120-C</strong> Seal Holder, Carbide</li>
+                            <li>1 x <strong>BC 122</strong> Inlet Seat</li>
+                            <li>3 x <strong>BJ 123</strong> O-Ring</li>
+                            <li>1 x <strong>BC 222</strong> Washer</li>
+                            <li>3 x <strong>BC 230</strong> Bronze Sleeve</li>
+                            <li>1 x <strong>BC 315</strong> Spring</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BJ 026</strong> Port Plug</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
+                            <li>1 x <strong>BJ 072</strong> O-Ring</li>
+                            <li>1 x <strong>FT 011-UH</strong> Carbide Seat</li>
+                            <li>1 x <strong>FT 012</strong> H.P. Seal Assembly</li>
+                            <li>1 x <strong>GP 042</strong> ATF Lubricant, 32 oz.</li>
+                            <li>1 x <strong>MT 010</strong> Seal, Shaft Small</li>
+                            <li>1 x <strong>RJ 007</strong> Bearing, Thrust</li>
+                            <li>1 x <strong>SL 010</strong> Seal, Large</li>
+                            <li>1 x <strong>PL 514</strong> Tool Manual</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="heading6">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse6" aria-expanded="false" aria-controls="collapse6">
+                        <strong>BC 610-H9-C</strong> Overhaul Kit for BC-H9-C<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading6">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BC 008</strong> O-Ring</li>
+                            <li>1 x <strong>BC 009</strong> Bearing, Ball</li>
+                            <li>1 x <strong>BC 031</strong> Back-up Ring</li>
+                            <li>1 x <strong>BC 040</strong> O-Ring</li>
+                            <li>1 x <strong>BC 222</strong> Washer</li>
+                            <li>3 x <strong>BC 230</strong> Bronze Sleeve</li>
+                            <li>1 x <strong>BC 315</strong> Spring</li>
+                            <li>1 x <strong>BC 705-K</strong> Cartridge Assembly</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BJ 026</strong> Port Plug</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
+                            <li>1 x <strong>GP 042</strong> ATF Lubricant, 32 oz.</li>
+                            <li>1 x <strong>MT 010</strong> Seal, Shaft Small</li>
+                            <li>2 x <strong>RJ 007</strong> Bearing, Thrust</li>
+                            <li>1 x <strong>SL 010</strong> Seal, Large</li>
+                            <li>1 x <strong>PL 515</strong> Tool Manual</li>
+                            <li>1 x <strong>PL 607</strong> Cartridge manual</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="heading7">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse7" aria-expanded="false" aria-controls="collapse7">
+                        <strong>BC 610-H9-C-Ti</strong> Overhaul Kit for BC-H9-C-Ti<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse7" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading7">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BC 008</strong> O-Ring</li>
+                            <li>1 x <strong>BC 009</strong> Bearing, Ball</li>
+                            <li>1 x <strong>BC 031</strong> Back-up Ring</li>
+                            <li>1 x <strong>BC 040</strong> O-Ring</li>
+                            <li>1 x <strong>BC 222</strong> Washer</li>
+                            <li>3 x <strong>BC 230</strong> Bronze Sleeve</li>
+                            <li>1 x <strong>BC 315</strong> Spring</li>
+                            <li>1 x <strong>BC 705-K</strong> Cartridge Assembly</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BJ 026</strong> Port Plug</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
+                            <li>1 x <strong>GP 042</strong> ATF Lubricant, 32 oz.</li>
+                            <li>1 x <strong>MT 010</strong> Seal, Shaft Small</li>
+                            <li>2 x <strong>RJ 007</strong> Bearing, Thrust</li>
+                            <li>1 x <strong>SL 010</strong> Seal, Large</li>
+                            <li>1 x <strong>PL 566</strong> Tool Manual</li>
+                            <li>1 x <strong>PL 607</strong> Cartridge manual</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="heading8">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse8" aria-expanded="false" aria-controls="collapse8">
+                        <strong>BC 612</strong> Tool Kit for BC-K/BC-H9-C/BC-H9-C-Ti<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse8" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading8">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>MT 105</strong> Assembly Tool</li>
+                            <li>1 x <strong>SL 105</strong> Assembly Tool</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <aside class="col-sm-3 col-sm-offset-1 aside-box">
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+            </aside>
           </section>
 
         </div><!-- /content -->
