--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -29,6 +29,7 @@ master-slider: yes
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-03.jpg" alt="BJV high pressure pipe cleaning">
             <img class="ms-thumb" src="/assets/img/product/thumb-bjv-03.jpg" alt="thumb">
+            <a data-type="video" href="https://www.youtube.com/embed/yibtu38tkXM"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-04.jpg" alt="BJV high pressure pipe cleaning">
@@ -45,7 +46,6 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-01.jpg" alt="BJV high pressure pipe cleaning">
             <img class="ms-thumb" src="/assets/img/product/thumb-bjv-01.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/yibtu38tkXM"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/bjv-02.jpg" alt="BJV high pressure pipe cleaning">
@@ -1431,6 +1431,10 @@ master-slider: yes
       <div class="item">
         <a href="/bjv-centralizers"><img class="img-responsive" src="/assets/img/product/thumb-bjv-02.jpg" alt="BJV Centralizers">
         <h5>BJV Centralizers</h5></a>
+      </div>
+      <div class="item">
+        <a href="/extension-nipples"><img class="img-responsive" src="/assets/img/product/thumb-extensions-01.jpg" alt="Extension nipples for high pressure jetting">
+        <h5>Extension Nipples</h5></a>
       </div>
       <div class="item">
         <a href="/gopher"><img class="img-responsive" src="/assets/img/product/thumb-gopher-01.jpg" alt="Gopher Tube Cleaning Tools">
