--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -638,8 +638,8 @@ landing: yes
         <div class="mix accessories" data-name="nozzles">
           <a href="/nozzles" class="search-text">
             <img src="/assets/img/product/nozzles-ap.jpg" class="img-responsive" />
-            <h3>Nozzles and Extensions</h3>
-            <h5>High pressure</h5>
+            <h3>Nozzles</h3>
+            <h5>Powerful jetting</h5>
             <table class="table">
               <tbody>
                 <tr>
@@ -668,6 +668,25 @@ landing: yes
                 <tr>
                   <th>Flow</th>
                   <td>Up to 50 gpm <br><span class="metric">190 l/min</span></td>
+                </tr>
+              </tbody>
+            </table>
+            <button>View Details</button>
+          </a>
+        </div>
+        
+        <div class="mix pipe-cleaning tank-cleaning accessories" data-name="pipe-extensions">
+          <a href="/pipe-extensions" class="search-text">
+            <img src="/assets/img/product/extensions-04.jpg" class="img-responsive" />
+            <h3>Pipe Extensions</h3>
+            <h5>For large pipe and vessel cleaning</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th colspan="2" style="text-align:center;">Reduce standoff distance</th>
+                </tr>
+                <tr>
+                  <td colspan="2" style="text-align:center;">Maximize jet power and material removal rates</td>
                 </tr>
               </tbody>
             </table>
@@ -773,6 +792,27 @@ landing: yes
                 <tr>
                   <th>Flow</th>
                   <td>Up to 600 gpm <br><span class="metric">2300 l/min</span></td>
+                </tr>
+              </tbody>
+            </table>
+            <button>View Details</button>
+          </a>
+        </div>
+        
+        <div class="mix tank-cleaning swivels" data-name="scs">
+          <a href="/scs" class="search-text">
+            <img src="/assets/img/product/scs-01.jpg" class="img-responsive" />
+            <h3>SCS</h3>
+            <h5>High flow tank cleaning</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Pressure Range</th>
+                  <td>10-22k psi<br><span class="metric">690–1500 bar</span></td>
+                </tr>
+                <tr>
+                  <th>Flow Range</th>
+                  <td>40-300 gpm<br><span class="metric">151–1136 l/min</span></td>
                 </tr>
               </tbody>
             </table>
@@ -946,6 +986,8 @@ landing: yes
           </a>
         </div>
 
+        <div class="gap"></div>
+        <div class="gap"></div>
         <div class="gap"></div>
       </div>
     </div>
