--- a/rotary-waterblast-tools/rotary-swivels.html
+++ b/rotary-waterblast-tools/rotary-swivels.html
@@ -27,29 +27,29 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/swivel-01.jpg" alt="Rotary swivels for waterblast tooling">
-            <img class="ms-thumb" src="../assets/img/product/thumb-swivel-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/swivel-01.jpg" alt="Rotary swivels for waterblast tooling">
+            <img class="ms-thumb" src="/assets/img/product/thumb-swivel-01.jpg" alt="thumb">
 <!--              <a data-type="video" href="https://www.youtube.com/embed/mSRf2yelD0I"> </a>-->
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/swivel-sg.jpg" alt="Rotary swivels for waterblast tooling">
-            <img class="ms-thumb" src="../assets/img/product/thumb-swivel-sg.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/swivel-sg.jpg" alt="Rotary swivels for waterblast tooling">
+            <img class="ms-thumb" src="/assets/img/product/thumb-swivel-sg.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/swivel-sh.jpg" alt="Rotary swivels for waterblast tooling">
-            <img class="ms-thumb" src="../assets/img/product/thumb-swivel-sh.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/swivel-sh.jpg" alt="Rotary swivels for waterblast tooling">
+            <img class="ms-thumb" src="/assets/img/product/thumb-swivel-sh.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/swivel-sl.jpg" alt="Rotary swivels for waterblast tooling">
-            <img class="ms-thumb" src="../assets/img/product/thumb-swivel-sl.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/swivel-sl.jpg" alt="Rotary swivels for waterblast tooling">
+            <img class="ms-thumb" src="/assets/img/product/thumb-swivel-sl.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/swivel-sm.jpg" alt="Rotary swivels for waterblast tooling">
-            <img class="ms-thumb" src="../assets/img/product/thumb-swivel-sm.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/swivel-sm.jpg" alt="Rotary swivels for waterblast tooling">
+            <img class="ms-thumb" src="/assets/img/product/thumb-swivel-sm.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/swivel-uh.jpg" alt="Rotary swivels for waterblast tooling">
-            <img class="ms-thumb" src="../assets/img/product/thumb-swivel-uh.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/swivel-uh.jpg" alt="Rotary swivels for waterblast tooling">
+            <img class="ms-thumb" src="/assets/img/product/thumb-swivel-uh.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -1042,13 +1042,13 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/manuals/SG_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SG Swivel User Manual</a></li>
-                <li><a href="../assets/pdf/manuals/SG-CCN_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SG-CCN Swivel User Manual</a></li>
-                <li><a href="../assets/pdf/manuals/SH_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SH Swivel User Manual</a></li>
-                <li><a href="../assets/pdf/manuals/SL_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SL Swivel User Manual</a></li>
-                <li><a href="../assets/pdf/manuals/SM_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SM Swivel User Manual</a></li>
-                <li><a href="../assets/pdf/manuals/UH_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;UH Swivel User Manual</a></li>
-                <li><a href="../assets/pdf/manuals/UHS_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;UHS Swivel User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/SG_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SG Swivel User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/SG-CCN_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SG-CCN Swivel User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/SH_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SH Swivel User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/SL_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SL Swivel User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/SM_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SM Swivel User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/UH_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;UH Swivel User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/UHS_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;UHS Swivel User Manual</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -1057,7 +1057,7 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
     </div>
   </div>
   <!-- End Product Info -->
@@ -1072,11 +1072,11 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/navigator"><img class="img-responsive" src="../assets/img/product/thumb-navigator-04.jpg" alt="Navigator Hose Drive">
+      <a href="/navigator"><img class="img-responsive" src="/assets/img/product/thumb-navigator-04.jpg" alt="Navigator Hose Drive">
       <h5>Navigator Hose Drive</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/powered-cleaning-heads"><img class="img-responsive" src="../assets/img/product/thumb-sg-e60-01.jpg" alt="Powered Rotation Units">
+      <a href="/powered-cleaning-heads"><img class="img-responsive" src="/assets/img/product/thumb-sg-e60-01.jpg" alt="Powered Rotation Units">
       <h5>Powered Rotational Heads</h5></a>
     </div>
   </div>
@@ -1116,23 +1116,23 @@ master-slider: yes
       <div class="item active">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>Lines we've only been able to poke holes in are draining like no one has seen in over 20 years.</p>
           <p class="signed">-Dean Tramontana,<br/>La Place Equipment Co.</p>
         </div>
 -->
-        <img src="../assets/img/sliders/sg40_swivel.jpg" alt="SG swivels for high pressure surface cleaning">
+        <img src="/assets/img/sliders/sg40_swivel.jpg" alt="SG swivels for high pressure surface cleaning">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/uh40_swivel.jpg" alt="UH swivels for high pressure surface cleaning">
+        <img src="/assets/img/sliders/uh40_swivel.jpg" alt="UH swivels for high pressure surface cleaning">
       </div>
 
     </div><!-- End wrapper -->
