--- a/news.html
+++ b/news.html
@@ -17,6 +17,14 @@ permalink: /news
       
       <div class="media">          
         <div class="media-body">
+          <a href="http://news.stoneagetools.com/sales-org-announcement-dec-2016"><h4 class="media-heading"><i class="fa fa-newspaper-o"></i> StoneAge Sales Organization Announcement</h4></a>
+          CEO, Kerry Siggins, announces changes to StoneAge's global sales structure to improve support to the company's international dealer network and growing global customer base.
+          <p class="grey"><small>E-blast &ndash; December 7, 2016</small></p>
+        </div>
+      </div>
+      
+      <div class="media">          
+        <div class="media-body">
           <a href="http://news.stoneagetools.com/best-place-to-work-2016"><h4 class="media-heading"><i class="fa fa-newspaper-o"></i> StoneAge Recognized in OUTSIDE’s Best Places to Work 2016</h4></a>
           Each year, OUTSIDE recognizes the top 100 companies in the United States that help their employees strike the ideal balance between work and play.
           <p class="grey"><small>E-blast &ndash; November 16, 2016</small></p>
