--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/sales-org-announcement-dec-2016">StoneAge Sales Organization Announcement</a></h4>
+        <p>CEO, Kerry Siggins, announces changes to StoneAge's global sales structure to improve support to the company's international dealer network and growing global customer base.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, December 2016</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/best-place-to-work-2016">StoneAge Recognized in OUTSIDE’s Best Places to Work 2016</a></h4>
         <p>Each year, OUTSIDE recognizes the top 100 companies in the United States that help their employees strike the ideal balance between work and play.<br>
         <small><i class="fa fa-newspaper-o"></i> Outside Magazine, November 2016</small></p>
