service kit catch-up, search/lightbox snag

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -3,7 +3,7 @@
   <iframe width="854" height="480" src="https://www.youtube.com/embed/S4wGigUqs9o?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="rentals-vid">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/RBRXZTQLBf0?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/RBRXZTQLBf0?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <!-- WB -->
@@ -32,7 +32,7 @@
   <iframe width="854" height="480" src="https://www.youtube.com/embed/G8x8qTNmc7Q?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="abx-2l-belt-vid">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/mlXJTcdLGoA?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/mlXJTcdLGoA?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="abx-500-demo-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/RP77aZoHwNY?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
@@ -65,14 +65,10 @@
   <iframe width="854" height="480" src="https://www.youtube.com/embed/-wN6vijWhWI?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="pro-vid">
-<<<<<<< HEAD
   <iframe width="854" height="480" src="https://www.youtube.com/embed/8ycXXbtS7zw?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="pro-train-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/tY1ZUDknsBs?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
-=======
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/vGgs7_6oxHU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
->>>>>>> master
 </div>
 <div id="brlm-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/3v3Y6jtWtnQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
@@ -144,7 +140,16 @@
   <iframe width="854" height="480" src="https://www.youtube.com/embed/sFMKz5e7hGo?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="ast-vid">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/ysEzQ_8Yt5U?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/ysEzQ_8Yt5U?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="tr-130-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/XjbawmpnUkc&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="tr-130-demo-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/OUiqrv8elCA&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="tr-130-maint-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/XjbawmpnUkc&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <!-- Sewer -->
