--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -84,8 +84,8 @@ master-slider: yes
       <ul>
         <li><a href="#section-bar-1"><span>Specifications</span></a></li>
         <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
-<!--        <li><a href="#section-bar-3"><span>Videos</span></a></li>-->
-<!--        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
+        <li><a href="#section-bar-3"><span>Videos</span></a></li>
+        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>
       </ul>
     </nav>
     <div class="content-wrap">
@@ -175,16 +175,46 @@ master-slider: yes
         </aside>
       </section>
 
-      <!-- Videos
+      <!-- Videos -->
       <section id="section-bar-3">
         <div class="row row-centered">
           <div class="col-sm-4 col-centered">
+            <!-- Lightbox call - WORKING TEST -->
+            <div>
+              <a href="#" data-featherlight="#tr-130-demo-vid">
+                <img src="/assets/vid/thumb/tr-130-demo-vid.png" alt="TR-130 Demo Video" class="img-responsive" />
+              </a>
+            </div>
+            <!-- End Lightbox call -->
+            <p class="caption">Torus TR-130 Demo Video</p>   
+            
+             <iframe class="lightbox" id="tr-130-demo-vid" width="854" height="480" src="https://www.youtube.com/embed/XjbawmpnUkc" frameborder="0" allowfullscreen></iframe>
             
           </div>
+          <div class="col-sm-4 col-centered">
+            <!-- Lightbox call -->
+            <div>
+              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #tr-130-vid">
+                <img src="/assets/vid/thumb/tr-130-vid.png" alt="TR-130 Overview Video" class="img-responsive" />
+              </a>
+            </div>
+            <!-- End Lightbox call -->
+            <p class="caption">Torus TR-130 Overview Video</p>            
+          </div>
+          <div class="col-sm-4 col-centered">
+            <!-- Lightbox call -->
+            <div>
+              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #tr-130-maint-vid">
+                <img src="/assets/vid/thumb/tr-130-maint-vid.png" alt="TR-130 Maintenance Video" class="img-responsive" />
+              </a>
+            </div>
+            <!-- End Lightbox call -->
+            <p class="caption">Torus TR-130 Maintenance Video</p>            
+          </div>
         </div>
-      </section> -->
+      </section> 
 
-      <!-- Kits 
+      <!-- Kits -->
       <section id="section-bar-4">
         <div class="col-sm-8">
           <h3>The following kits are available:</h3>
@@ -216,7 +246,6 @@ master-slider: yes
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
       </section>
--->
 
     </div><!-- /content -->
   </div><!-- /tabs -->
