--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -337,7 +337,7 @@ landing: yes
               <tbody>
                 <tr>
                   <th>Pipe Size</th>
-                  <td>6-180 in. &nbsp;<span class="metric">152 mm-4.5 m</span></td>
+                  <td>6-180 in.<br><span class="metric">152 mm-4.5 m</span></td>
                 </tr>
                 <tr>
                   <th>Pressure Range</th>
@@ -885,7 +885,7 @@ landing: yes
         
         <div class="mix surface-prep" data-name="striker">
           <a href="/striker" class="search-text">
-            <img src="/assets/img/product/striker-01.jpg" class="img-responsive" />
+            <img src="/assets/img/product/striker-08.jpg" class="img-responsive" />
             <h3>Striker</h3>
             <h5>Remote-controlled shotgunning</h5>
             <table class="table">
