--- a/waterblast-automation/cable-swivel-tool.html
+++ b/waterblast-automation/cable-swivel-tool.html
@@ -84,7 +84,7 @@ master-slider: yes
         <ul>
             <li><a href="#section-bar-1"><span>Specifications</span></a></li>
             <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
-<!--            <li><a href="#section-bar-3"><span>Service Kits</span></a></li>-->
+            <li><a href="#section-bar-3"><span>Service Kits</span></a></li>
         </ul>
     </nav>
     <div class="content-wrap">
@@ -172,7 +172,7 @@ master-slider: yes
         </aside>
       </section>
 
-      <!-- Kits
+      <!-- Kits -->
       <section id="section-bar-3">
         <div class="col-sm-8">
           <h3>The following kits are available:</h3>
@@ -182,15 +182,16 @@ master-slider: yes
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
                   <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    <strong>ABX 614</strong> ABX-2L Belt Replacement Kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                    <strong>CST 600</strong> Service Kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                   </a>
                 </h4>
               </div>
               <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                   <ul>
-                    <li>Drive belt</li>
-                    <li>Belt Replacement Addendum</li>
+                    <li>2 x <strong>CST 012</strong> H.P. Seal</li>
+                    <li>4 x <strong>CST 030</strong> O-Ring</li>
+                    <li>4 x <strong>CST 031</strong> Backup Ring</li>
                   </ul>
                 </div>
               </div>
@@ -199,50 +200,29 @@ master-slider: yes
               <div class="panel-heading" role="tab" id="headingTwo">
                 <h4 class="panel-title">
                   <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    <strong>ABX-2L EPP</strong> 	Extra Parts Package - 6mm<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                    <strong>CST 610</strong> Overhaul Kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                   </a>
                 </h4>
               </div>
               <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                 <div class="panel-body">
-                  <ul>
-                    <li>Drive rollers </li>
-                    <li>Required square key</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingThree">
-                <h4 class="panel-title">
-                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
-                    <strong>ABX-2L EPPS</strong> 	Extra Parts Package - ???<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-                  </a>
-                </h4>
-              </div>
-              <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                <div class="panel-body">
-                  <ul>
-                    <li>Drive rollers</li>
-                    <li>Required square key</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingFour">
-                <h4 class="panel-title">
-                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                    <strong>ABX-2L EP-001</strong> Extra Parts Package - 6mm, 8mm<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-                  </a>
-                </h4>
-              </div>
-              <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                <div class="panel-body">
-                  <ul>
-                    <li>Drive rollers, 2 sizes</li>
-                    <li>Required square key</li>
-                  </ul>
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <ul>
+                        <li>2 x <strong>CST 012</strong> H.P. Seal</li>
+                        <li>4 x <strong>CST 030</strong> O-Ring</li>
+                        <li>4 x <strong>CST 031</strong> Backup Ring</li>
+                        <li>4 x <strong>CST 033</strong> Seal, Shaft</li>
+                      </ul>
+                    </div>
+                    <div class="col-sm-6">
+                      <ul>
+                        <li>3 x <strong>CST 109</strong> Bearing, Ball</li>
+                        <li>2 x <strong>CST 205</strong> Face Ring</li>
+                        <li>2 x <strong>CST 211</strong> Carbide Seat</li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -253,7 +233,7 @@ master-slider: yes
           <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
-      </section> -->
+      </section>
 
 
     </div><!-- /content -->
