TX location update

--- a/loc-houston.html
+++ b/loc-houston.html
@@ -49,11 +49,11 @@ contact-houston: yes
         <h3 class="section-heading">Operations, Rentals, Field Support</h3>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Harry Richmond</strong><br/>
+            <p><strong>Stephen Shivar</strong><br/>
               Operations Manager<br/>
               Main: +1 (281) 888-5069<br/>
-              Mobile: +1 (713) 703-3207
-            <a href="mailto:harry.richmond@stoneagetools.com">harry.richmond@stoneagetools.com</a></p>
+              Mobile: +1 (832) 720-8798
+            <a href="mailto:stephen.shivar@stoneagetools.com">stephen.shivar@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
             <p><strong>Valoree Miller</strong><br/>
@@ -63,6 +63,13 @@ contact-houston: yes
           </div>
         </div>
         <div class="row">
+          <div class="col-sm-6">
+            <p><strong>Harry Richmond</strong><br/>
+              Automation Technician<br/>
+              Main: +1 (281) 888-5069<br/>
+              Mobile: +1 (713) 703-3207
+            <a href="mailto:harry.richmond@stoneagetools.com">harry.richmond@stoneagetools.com</a></p>
+          </div>
           <div class="col-sm-6">
             <p><strong>Doug McGee</strong>
             <br/>Automation Technician<br/>
