news and manual updates

--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/new-regional-sales-managers" target="_blank">Meet Our Newest Regional Sales Managers</a></h4>
+        <p>StoneAge is pleased to welcome two new Regional Sales Managers to our outside sales team: Sean Baker and John Graham.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, December 2016</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/sales-org-announcement-dec-2016">StoneAge Sales Organization Announcement</a></h4>
         <p>CEO, Kerry Siggins, announces changes to StoneAge's global sales structure to improve support to the company's international dealer network and growing global customer base.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, December 2016</small></p>
@@ -206,11 +211,6 @@ permalink: /
         <h4><a href="http://news.stoneagetools.com/wireless-tracked-striker">Wireless Tracked Striker Now Available</a></h4>
         <p>StoneAge is pleased to announce the New Wireless Tracked Striker Remote Shotgun System.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, October 2016</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/rental-program-for-waterblast-equipment-launched" target="_blank">Rentals Now Available</a></h4>
-        <p>StoneAge announces rental program for waterblast tools and equipment. You can now rent industry-leading waterblast tools and automated equipment from StoneAge regional locations in TX, LA, and OH.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2016</small></p>
       </li>
       <li><a href="/news">More news here</a></li>
     </ul>
