--- a/news.html
+++ b/news.html
@@ -17,7 +17,14 @@ permalink: /news
       
       <div class="media">          
         <div class="media-body">
-          <a href="http://news.stoneagetools.com/sales-org-announcement-dec-2016"><h4 class="media-heading"><i class="fa fa-newspaper-o"></i> StoneAge Sales Organization Announcement</h4></a>
+          <a href="http://news.stoneagetools.com/new-regional-sales-managers"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> Meet Our Newest Regional Sales Managers</h4></a>
+          StoneAge is pleased to welcome two new Regional Sales Managers to our outside sales team: Sean Baker and John Graham.
+          <p class="grey"><small>E-blast &ndash; December 22, 2016</small></p>
+        </div>
+      
+      <div class="media">          
+        <div class="media-body">
+          <a href="http://news.stoneagetools.com/sales-org-announcement-dec-2016"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> StoneAge Sales Organization Announcement</h4></a>
           CEO, Kerry Siggins, announces changes to StoneAge's global sales structure to improve support to the company's international dealer network and growing global customer base.
           <p class="grey"><small>E-blast &ndash; December 7, 2016</small></p>
         </div>
